--- a/appnode/package.json
+++ b/appnode/package.json
@@ -10,7 +10,10 @@
   "author": "Franklin Apaza Romero",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "pg": "^8.11.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.31.1"
